kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral3.sem
function myStuff.myFunction(): Integer {
  Integer."0x1337"
}
